WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263347
REGRESSION (Sonoma): [ Sonoma wk2 Release ] compositing/reflections/repaint-with-reflection.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=263347
Summary
REGRESSION (Sonoma): [ Sonoma wk2 Release ] compositing/reflections/repaint-w...
Marta Darbinyan
Reported
2023-10-18 16:45:25 PDT
Created
attachment 468271
[details]
image diff Description: compositing/reflections/repaint-with-reflection.html is flaky on ToT after Sonoma bringup. This issue can be reproduced by using the command: run-webkit-tests --release --iterations=1 compositing/reflections/repaint-with-reflection.html History:
https://results.webkit.org/?suite=layout-tests&test=compositing%2Freflections%2Frepaint-with-reflection.html&version_name=Sonoma&flavor=wk2&style=release
Image Diff: Attached Link:
https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/269484@main%20(340)/compositing/hidpi-compositing-layer-with-tile-layers-on-subpixel-position-diffs.html
Attachments
image diff
(8.38 KB, image/png)
2023-10-18 16:45 PDT
,
Marta Darbinyan
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-18 16:46:37 PDT
<
rdar://problem/117172843
>
Marta Darbinyan
Comment 2
2023-10-18 17:01:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19259
EWS
Comment 3
2023-10-19 08:29:15 PDT
Test gardening commit
269525@main
(baf976cf2d69): <
https://commits.webkit.org/269525@main
> Reviewed commits have been landed. Closing PR #19259 and removing active labels.
Simon Fraser (smfr)
Comment 4
2023-10-31 20:12:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19813
EWS
Comment 5
2023-11-01 15:02:21 PDT
Committed
270082@main
(e0e30a6cf70c): <
https://commits.webkit.org/270082@main
> Reviewed commits have been landed. Closing PR #19813 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug