REGRESSION (Sonoma): [ Sonoma wk2 Release ] compositing/reflections/repaint-with-reflection.html is flaky https://bugs.webkit.org/show_bug.cgi?id=263347 rdar://117172843

Reviewed by Tim Horton.

Increase the scope of having a non-null `m_currentTransaction` in `RemoteLayerTreeContext::buildTransaction()`,
since `paintReachableBackingStoreContents()` can call `PlatformCALayerRemote::copyContentsFromLayer()` for
layers with reflections, and we need `RemoteLayerTreeContext::layerPropertyChangedWhileBuildingTransaction()`
to see `m_currentTransaction` so we mark the clone as having changed properties.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeContext.mm:
(WebKit::RemoteLayerTreeContext::buildTransaction):

Canonical link: https://commits.webkit.org/270082@main